--- a/index.html
+++ b/index.html
@@ -14,14 +14,11 @@
 </p>
 <x3d width="800px" height="800px">
 <scene>
-<Viewpoint position="1.34777 24.49247 113.07194" orientation="0.00000 -1.00000 0.00000 0.00785" 
-	centerOfRotation="2.41522 24.49247 -22.83765" fieldOfView="0.78540" description="defaultX3DViewpointNode"></Viewpoint>
 <inline url="https://raw.githubusercontent.com/cberge2/Modelo3D/refs/heads/main/Modelo%2010K.x3d"> </inline>
 </scene>
 </x3d>
 <p>
     Texto final
 </p>
-  
-
-</body></html>
+</body>
+</html>
